ANTLR/YAPLParser.py
# Generated from YAPL.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class YAPLParser ( Parser ):

    grammarFileName = "YAPL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'false'", "'true'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "';'", "'{'", 
                     "'}'", "'('", "')'", "','", "':'", "'<-'", "'@'", "'.'", 
                     "'+'", "'-'", "'*'", "'/'", "'='", "'~'", "'<'", "'<='" ]

    symbolicNames = [ "<INVALID>", "INT", "ID", "TYPE", "CLASS", "ELSE", 
                      "FI", "IF", "IN", "INHERITS", "IS_VOID", "LOOP", "POOL", 
                      "THEN", "WHILE", "NEW", "NOT", "LET", "FALSE", "TRUE", 
                      "STRING", "COMMENT", "COMMENT_BLOCK", "WHITE_SPACE", 
                      "SEMICOLON", "OPEN_CURLY_BRACKETS", "CLOSE_CURLY_BRACKETS", 
                      "OPEN_PARENTHESES", "CLOSE_PARENTHESES", "COMMA", 
                      "COLON", "ASSING", "AT", "DOT", "ADD", "SUB", "MUL", 
                      "DIV", "EQUAL", "N_MARK", "LOWER_THAN", "LOWER_THAN_EQUAL" ]

    RULE_program = 0
    RULE_newclass = 1
    RULE_feature = 2
    RULE_formal = 3
    RULE_expr = 4

    ruleNames =  [ "program", "newclass", "feature", "formal", "expr" ]

    EOF = Token.EOF
    INT=1
    ID=2
    TYPE=3
    CLASS=4
    ELSE=5
    FI=6
    IF=7
    IN=8
    INHERITS=9
    IS_VOID=10
    LOOP=11
    POOL=12
    THEN=13
    WHILE=14
    NEW=15
    NOT=16
    LET=17
    FALSE=18
    TRUE=19
    STRING=20
    COMMENT=21
    COMMENT_BLOCK=22
    WHITE_SPACE=23
    SEMICOLON=24
    OPEN_CURLY_BRACKETS=25
    CLOSE_CURLY_BRACKETS=26
    OPEN_PARENTHESES=27
    CLOSE_PARENTHESES=28
    COMMA=29
    COLON=30
    ASSING=31
    AT=32
    DOT=33
    ADD=34
    SUB=35
    MUL=36
    DIV=37
    EQUAL=38
    N_MARK=39
    LOWER_THAN=40
    LOWER_THAN_EQUAL=41

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(YAPLParser.EOF, 0)

        def newclass(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.NewclassContext)
            else:
                return self.getTypedRuleContext(YAPLParser.NewclassContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.SEMICOLON)
            else:
                return self.getToken(YAPLParser.SEMICOLON, i)

        def getRuleIndex(self):
            return YAPLParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = YAPLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 13 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 10
                self.newclass()
                self.state = 11
                self.match(YAPLParser.SEMICOLON)
                self.state = 15 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==YAPLParser.CLASS):
                    break

            self.state = 17
            self.match(YAPLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NewclassContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(YAPLParser.CLASS, 0)

        def TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.TYPE)
            else:
                return self.getToken(YAPLParser.TYPE, i)

        def OPEN_CURLY_BRACKETS(self):
            return self.getToken(YAPLParser.OPEN_CURLY_BRACKETS, 0)

        def CLOSE_CURLY_BRACKETS(self):
            return self.getToken(YAPLParser.CLOSE_CURLY_BRACKETS, 0)

        def INHERITS(self):
            return self.getToken(YAPLParser.INHERITS, 0)

        def feature(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.FeatureContext)
            else:
                return self.getTypedRuleContext(YAPLParser.FeatureContext,i)


        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.SEMICOLON)
            else:
                return self.getToken(YAPLParser.SEMICOLON, i)

        def getRuleIndex(self):
            return YAPLParser.RULE_newclass

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNewclass" ):
                listener.enterNewclass(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNewclass" ):
                listener.exitNewclass(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNewclass" ):
                return visitor.visitNewclass(self)
            else:
                return visitor.visitChildren(self)




    def newclass(self):

        localctx = YAPLParser.NewclassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_newclass)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 19
            self.match(YAPLParser.CLASS)
            self.state = 20
            self.match(YAPLParser.TYPE)
            self.state = 23
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==YAPLParser.INHERITS:
                self.state = 21
                self.match(YAPLParser.INHERITS)
                self.state = 22
                self.match(YAPLParser.TYPE)


            self.state = 25
            self.match(YAPLParser.OPEN_CURLY_BRACKETS)
            self.state = 31
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==YAPLParser.ID:
                self.state = 26
                self.feature()
                self.state = 27
                self.match(YAPLParser.SEMICOLON)
                self.state = 33
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 34
            self.match(YAPLParser.CLOSE_CURLY_BRACKETS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FeatureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(YAPLParser.ID, 0)

        def OPEN_PARENTHESES(self):
            return self.getToken(YAPLParser.OPEN_PARENTHESES, 0)

        def CLOSE_PARENTHESES(self):
            return self.getToken(YAPLParser.CLOSE_PARENTHESES, 0)

        def COLON(self):
            return self.getToken(YAPLParser.COLON, 0)

        def TYPE(self):
            return self.getToken(YAPLParser.TYPE, 0)

        def OPEN_CURLY_BRACKETS(self):
            return self.getToken(YAPLParser.OPEN_CURLY_BRACKETS, 0)

        def expr(self):
            return self.getTypedRuleContext(YAPLParser.ExprContext,0)


        def CLOSE_CURLY_BRACKETS(self):
            return self.getToken(YAPLParser.CLOSE_CURLY_BRACKETS, 0)

        def formal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.FormalContext)
            else:
                return self.getTypedRuleContext(YAPLParser.FormalContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.COMMA)
            else:
                return self.getToken(YAPLParser.COMMA, i)

        def ASSING(self):
            return self.getToken(YAPLParser.ASSING, 0)

        def getRuleIndex(self):
            return YAPLParser.RULE_feature

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFeature" ):
                listener.enterFeature(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFeature" ):
                listener.exitFeature(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFeature" ):
                return visitor.visitFeature(self)
            else:
                return visitor.visitChildren(self)




    def feature(self):

        localctx = YAPLParser.FeatureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_feature)
        self._la = 0 # Token type
        try:
            self.state = 64
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 36
                self.match(YAPLParser.ID)
                self.state = 37
                self.match(YAPLParser.OPEN_PARENTHESES)
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==YAPLParser.ID:
                    self.state = 38
                    self.formal()
                    self.state = 42
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==YAPLParser.COMMA:
                        self.state = 39
                        self.match(YAPLParser.COMMA)
                        self.state = 44
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 49
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 50
                self.match(YAPLParser.CLOSE_PARENTHESES)
                self.state = 51
                self.match(YAPLParser.COLON)
                self.state = 52
                self.match(YAPLParser.TYPE)
                self.state = 53
                self.match(YAPLParser.OPEN_CURLY_BRACKETS)
                self.state = 54
                self.expr(0)
                self.state = 55
                self.match(YAPLParser.CLOSE_CURLY_BRACKETS)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 57
                self.match(YAPLParser.ID)
                self.state = 58
                self.match(YAPLParser.COLON)
                self.state = 59
                self.match(YAPLParser.TYPE)
                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==YAPLParser.ASSING:
                    self.state = 60
                    self.match(YAPLParser.ASSING)
                    self.state = 61
                    self.expr(0)


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(YAPLParser.ID, 0)

        def COLON(self):
            return self.getToken(YAPLParser.COLON, 0)

        def TYPE(self):
            return self.getToken(YAPLParser.TYPE, 0)

        def getRuleIndex(self):
            return YAPLParser.RULE_formal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormal" ):
                listener.enterFormal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormal" ):
                listener.exitFormal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormal" ):
                return visitor.visitFormal(self)
            else:
                return visitor.visitChildren(self)




    def formal(self):

        localctx = YAPLParser.FormalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_formal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(YAPLParser.ID)
            self.state = 67
            self.match(YAPLParser.COLON)
            self.state = 68
            self.match(YAPLParser.TYPE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(YAPLParser.IF, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(YAPLParser.ExprContext)
            else:
                return self.getTypedRuleContext(YAPLParser.ExprContext,i)


        def THEN(self):
            return self.getToken(YAPLParser.THEN, 0)

        def ELSE(self):
            return self.getToken(YAPLParser.ELSE, 0)

        def FI(self):
            return self.getToken(YAPLParser.FI, 0)

        def WHILE(self):
            return self.getToken(YAPLParser.WHILE, 0)

        def LOOP(self):
            return self.getToken(YAPLParser.LOOP, 0)

        def POOL(self):
            return self.getToken(YAPLParser.POOL, 0)

        def OPEN_CURLY_BRACKETS(self):
            return self.getToken(YAPLParser.OPEN_CURLY_BRACKETS, 0)

        def CLOSE_CURLY_BRACKETS(self):
            return self.getToken(YAPLParser.CLOSE_CURLY_BRACKETS, 0)

        def SEMICOLON(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.SEMICOLON)
            else:
                return self.getToken(YAPLParser.SEMICOLON, i)

        def LET(self):
            return self.getToken(YAPLParser.LET, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.ID)
            else:
                return self.getToken(YAPLParser.ID, i)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.COLON)
            else:
                return self.getToken(YAPLParser.COLON, i)

        def TYPE(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.TYPE)
            else:
                return self.getToken(YAPLParser.TYPE, i)

        def IN(self):
            return self.getToken(YAPLParser.IN, 0)

        def ASSING(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.ASSING)
            else:
                return self.getToken(YAPLParser.ASSING, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(YAPLParser.COMMA)
            else:
                return self.getToken(YAPLParser.COMMA, i)

        def NEW(self):
            return self.getToken(YAPLParser.NEW, 0)

        def IS_VOID(self):
            return self.getToken(YAPLParser.IS_VOID, 0)

        def N_MARK(self):
            return self.getToken(YAPLParser.N_MARK, 0)

        def NOT(self):
            return self.getToken(YAPLParser.NOT, 0)

        def OPEN_PARENTHESES(self):
            return self.getToken(YAPLParser.OPEN_PARENTHESES, 0)

        def CLOSE_PARENTHESES(self):
            return self.getToken(YAPLParser.CLOSE_PARENTHESES, 0)

        def INT(self):
            return self.getToken(YAPLParser.INT, 0)

        def STRING(self):
            return self.getToken(YAPLParser.STRING, 0)

        def TRUE(self):
            return self.getToken(YAPLParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(YAPLParser.FALSE, 0)

        def MUL(self):
            return self.getToken(YAPLParser.MUL, 0)

        def DIV(self):
            return self.getToken(YAPLParser.DIV, 0)

        def ADD(self):
            return self.getToken(YAPLParser.ADD, 0)

        def SUB(self):
            return self.getToken(YAPLParser.SUB, 0)

        def LOWER_THAN_EQUAL(self):
            return self.getToken(YAPLParser.LOWER_THAN_EQUAL, 0)

        def LOWER_THAN(self):
            return self.getToken(YAPLParser.LOWER_THAN, 0)

        def EQUAL(self):
            return self.getToken(YAPLParser.EQUAL, 0)

        def DOT(self):
            return self.getToken(YAPLParser.DOT, 0)

        def AT(self):
            return self.getToken(YAPLParser.AT, 0)

        def getRuleIndex(self):
            return YAPLParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = YAPLParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 71
                self.match(YAPLParser.IF)
                self.state = 72
                self.expr(0)
                self.state = 73
                self.match(YAPLParser.THEN)
                self.state = 74
                self.expr(0)
                self.state = 75
                self.match(YAPLParser.ELSE)
                self.state = 76
                self.expr(0)
                self.state = 77
                self.match(YAPLParser.FI)
                pass

            elif la_ == 2:
                self.state = 79
                self.match(YAPLParser.WHILE)
                self.state = 80
                self.expr(0)
                self.state = 81
                self.match(YAPLParser.LOOP)
                self.state = 82
                self.expr(0)
                self.state = 83
                self.match(YAPLParser.POOL)
                pass

            elif la_ == 3:
                self.state = 85
                self.match(YAPLParser.OPEN_CURLY_BRACKETS)
                self.state = 89 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 86
                    self.expr(0)
                    self.state = 87
                    self.match(YAPLParser.SEMICOLON)
                    self.state = 91 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << YAPLParser.INT) | (1 << YAPLParser.ID) | (1 << YAPLParser.IF) | (1 << YAPLParser.IS_VOID) | (1 << YAPLParser.WHILE) | (1 << YAPLParser.NEW) | (1 << YAPLParser.NOT) | (1 << YAPLParser.LET) | (1 << YAPLParser.FALSE) | (1 << YAPLParser.TRUE) | (1 << YAPLParser.STRING) | (1 << YAPLParser.OPEN_CURLY_BRACKETS) | (1 << YAPLParser.OPEN_PARENTHESES) | (1 << YAPLParser.N_MARK))) != 0)):
                        break

                self.state = 93
                self.match(YAPLParser.CLOSE_CURLY_BRACKETS)
                pass

            elif la_ == 4:
                self.state = 95
                self.match(YAPLParser.LET)
                self.state = 96
                self.match(YAPLParser.ID)
                self.state = 97
                self.match(YAPLParser.COLON)
                self.state = 98
                self.match(YAPLParser.TYPE)
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==YAPLParser.ASSING:
                    self.state = 99
                    self.match(YAPLParser.ASSING)
                    self.state = 100
                    self.expr(0)


                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==YAPLParser.COMMA:
                    self.state = 103
                    self.match(YAPLParser.COMMA)
                    self.state = 104
                    self.match(YAPLParser.ID)
                    self.state = 105
                    self.match(YAPLParser.COLON)
                    self.state = 106
                    self.match(YAPLParser.TYPE)
                    self.state = 107
                    self.match(YAPLParser.ASSING)
                    self.state = 108
                    self.expr(0)
                    self.state = 113
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 114
                self.match(YAPLParser.IN)
                self.state = 115
                self.expr(19)
                pass

            elif la_ == 5:
                self.state = 116
                self.match(YAPLParser.NEW)
                self.state = 117
                self.match(YAPLParser.TYPE)
                pass

            elif la_ == 6:
                self.state = 118
                self.match(YAPLParser.IS_VOID)
                self.state = 119
                self.expr(17)
                pass

            elif la_ == 7:
                self.state = 120
                self.match(YAPLParser.N_MARK)
                self.state = 121
                self.expr(16)
                pass

            elif la_ == 8:
                self.state = 122
                self.match(YAPLParser.NOT)
                self.state = 123
                self.expr(8)
                pass

            elif la_ == 9:
                self.state = 124
                self.match(YAPLParser.OPEN_PARENTHESES)
                self.state = 125
                self.expr(0)
                self.state = 126
                self.match(YAPLParser.CLOSE_PARENTHESES)
                pass

            elif la_ == 10:
                self.state = 128
                self.match(YAPLParser.ID)
                self.state = 129
                self.match(YAPLParser.ASSING)
                self.state = 130
                self.expr(6)
                pass

            elif la_ == 11:
                self.state = 131
                self.match(YAPLParser.ID)
                pass

            elif la_ == 12:
                self.state = 132
                self.match(YAPLParser.INT)
                pass

            elif la_ == 13:
                self.state = 133
                self.match(YAPLParser.STRING)
                pass

            elif la_ == 14:
                self.state = 134
                self.match(YAPLParser.TRUE)
                pass

            elif la_ == 15:
                self.state = 135
                self.match(YAPLParser.FALSE)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 195
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,17,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 193
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
                    if la_ == 1:
                        localctx = YAPLParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 138
                        if not self.precpred(self._ctx, 15):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 15)")
                        self.state = 139
                        self.match(YAPLParser.MUL)
                        self.state = 140
                        self.expr(16)
                        pass

                    elif la_ == 2:
                        localctx = YAPLParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 141
                        if not self.precpred(self._ctx, 14):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 14)")
                        self.state = 142
                        self.match(YAPLParser.DIV)
                        self.state = 143
                        self.expr(15)
                        pass

                    elif la_ == 3:
                        localctx = YAPLParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 144
                        if not self.precpred(self._ctx, 13):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 13)")
                        self.state = 145
                        self.match(YAPLParser.ADD)
                        self.state = 146
                        self.expr(14)
                        pass

                    elif la_ == 4:
                        localctx = YAPLParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 147
                        if not self.precpred(self._ctx, 12):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 12)")
                        self.state = 148
                        self.match(YAPLParser.SUB)
                        self.state = 149
                        self.expr(13)
                        pass

                    elif la_ == 5:
                        localctx = YAPLParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 150
                        if not self.precpred(self._ctx, 11):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 11)")
                        self.state = 151
                        self.match(YAPLParser.LOWER_THAN_EQUAL)
                        self.state = 152
                        self.expr(12)
                        pass

                    elif la_ == 6:
                        localctx = YAPLParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 153
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 154
                        self.match(YAPLParser.LOWER_THAN)
                        self.state = 155
                        self.expr(11)
                        pass

                    elif la_ == 7:
                        localctx = YAPLParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 156
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 157
                        self.match(YAPLParser.EQUAL)
                        self.state = 158
                        self.expr(10)
                        pass

                    elif la_ == 8:
                        localctx = YAPLParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 159
                        if not self.precpred(self._ctx, 24):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 24)")
                        self.state = 160
                        self.match(YAPLParser.OPEN_PARENTHESES)
                        self.state = 165 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while True:
                            self.state = 161
                            self.expr(0)
                            self.state = 163
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            if _la==YAPLParser.COMMA:
                                self.state = 162
                                self.match(YAPLParser.COMMA)


                            self.state = 167 
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)
                            if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << YAPLParser.INT) | (1 << YAPLParser.ID) | (1 << YAPLParser.IF) | (1 << YAPLParser.IS_VOID) | (1 << YAPLParser.WHILE) | (1 << YAPLParser.NEW) | (1 << YAPLParser.NOT) | (1 << YAPLParser.LET) | (1 << YAPLParser.FALSE) | (1 << YAPLParser.TRUE) | (1 << YAPLParser.STRING) | (1 << YAPLParser.OPEN_CURLY_BRACKETS) | (1 << YAPLParser.OPEN_PARENTHESES) | (1 << YAPLParser.N_MARK))) != 0)):
                                break

                        self.state = 169
                        self.match(YAPLParser.CLOSE_PARENTHESES)
                        pass

                    elif la_ == 9:
                        localctx = YAPLParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 171
                        if not self.precpred(self._ctx, 23):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 23)")
                        self.state = 174
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==YAPLParser.AT:
                            self.state = 172
                            self.match(YAPLParser.AT)
                            self.state = 173
                            self.match(YAPLParser.TYPE)

